# Generative-art

./: CMakeLists.txt  GIFRecorder.hpp  Palettes.hpp  README.md  main.cpp
audiovisualizer/: AudioVisualizer.hpp  CMakeLists.txt  main.cpp
fabric/: CMakeLists.txt  main.cpp  main_1.cpp
gabrielshorn/: CMakeLists.txt  main.cpp
gridgen/: CMakeLists.txt  GridGen.hpp  main.cpp
lib/: GIFRecorder.hpp
monograph/: CMakeLists.txt  Monograph.hpp  main.cpp
particlesystem/: CMakeLists.txt  main.cpp  particle.cpp  particle.hpp  text_particle_system.cpp  text_particle_system.hpp
smithtiles/: CMakeLists.txt  SmithTile.cpp  SmithTile.hpp  main.cpp
